Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,6 @@ margin-top: 20%;
 }
 .relink
  {
-	margin-top: 20%;
+	margin-top: 10%;
 	text-align: center;
 }
